# nvgt_plugins

./: .gitmodules  README.MD
.github/workflows/: build.yml  codeql.yml
fast/: CMakeLists.txt  README.md  vcpkg.json
fast/documentation/: fast_io.md
fast/include/math/: simd.h
fast/source/: plugin.cpp
fast/source/math/: simd.cpp
